complete swagger docs
